home page banner styles

--- a/index.html
+++ b/index.html
@@ -484,14 +484,14 @@
                 <a class="btn theme-blue nav-link signup-link" href="sign-up.html">Sign Up</a>
               </li>
               <li class="nav-item btn-group"> 
-                <button class="btn btn-text user-menu-toggle max-white-c dropdown"><a href="#" class="dropdown-toggl" id="user-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><figure class="avatar-sm"><img src="images/content/1x1/img-1x1-avatar.jpg" alt=""></figure><svg class="icon hidden"><use xlink:href="#icon-user" /></svg></a>
+                <button class="btn btn-text user-menu-toggle c-white dropdown"><a href="#" class="dropdown-toggl" id="user-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><figure class="avatar-sm"><img src="images/content/1x1/img-1x1-avatar.jpg" alt=""></figure><svg class="icon hidden"><use xlink:href="#icon-user" /></svg></a>
                   <div class="dropdown-menu" aria-labelledby="user-dropdown">
                     <a class="dropdown-item" href="commissions.html">Commissions Services</a>
                     <a class="dropdown-item" href="payments.html">Payments</a>
                     <a class="dropdown-item" href="loyalty.html">Loyalty</a>
                   </div>
                 </button>
-                <button class="btn btn-text max-white-c" data-toggle="modal" data-target="#search-modal"><svg class="icon"><use xlink:href="#icon-search" /></svg></button>
+                <button class="btn btn-text c-white" data-toggle="modal" data-target="#search-modal"><svg class="icon"><use xlink:href="#icon-search" /></svg></button>
               </li>
             </ul>
           </div>
@@ -502,7 +502,7 @@
     <main id="main" role="main">
 
       <!-- masthead -->
-      <section class="masthead bg-hero bg-hero-app-user-01 theme-black">
+      <section class="masthead bg-hero bg-hero-app-user-02 theme-dark">
         <div class="container">
           <h1>Commissions, Payments and Loyalty. Under One Roof.</h1>
           <p class="lead">The all-in-one incentive platform that rewards your success the more you use it. MaxCentive addresses the Commissions, Incentives, Payments, Loyalty and Analytics needs of any business in the simplest manner possible.</p>
@@ -514,16 +514,16 @@
       </section>
 
       <!-- CTA banner -->
-      <section id="page-start" class="banner banner-full">
+      <section id="page-start" class="banner banner-full bg-app-user-04-orange theme-orange">
         <div class="container">
           <!-- banner -->
           <div class="card card-row card-clean">
             <figure class="media-item mb-0 lazyload">
               <picture>
-                <source media="(min-width: 40em)" srcset="images/content/img-content-subscription-services.jpg" class="lazyload" alt="Group of application interfaces.">              
-                <img src="images/content/img-content-subscription-services-wide.jpg" data-src="images/content/img-content-subscription-services-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+                <source media="(min-width: 40em)" srcset="images/content/img-content-app-user-02-tall.jpg" class="lazyload" alt="Group of application interfaces.">              
+                <img src="images/content/img-content-app-user-02-wide.jpg" data-src="images/content/img-content-app-user-02-wide.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-app-user-02-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
             </figure>
@@ -537,7 +537,7 @@
       </section>
 
       <!-- CTA banner -->
-      <section class="banner banner-full theme-dark-green">
+      <section class="banner banner-full bg-dash-user-purple theme-purple">
         <div class="container">
           <!-- banner -->
           <div class="card card-row card-row-rev card-clean">
@@ -550,7 +550,7 @@
                 </noscript>
               </picture>
             </figure>
-            <div class="card-block bg-half-globe-left">
+            <div class="card-block">
               <h2 id="integration-services" class="card-title">Who Should Use MaxCentive?</h2>
               <p class="card-text">MaxCentive is designed to be used by Organizations of different shapes and sizes. We cater to every Organization from one-man band to a company of hundreds of thousands and everybody in between. Since MaxCentive is a SaaS application, it is ideal for any business that wants to focus on its core business and not worry about managing complex.</p>
               <a href="#" class="btn btn-lg btn-text">Learn More <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
@@ -560,33 +560,10 @@
       </section>
 
       <!-- CTA banner -->
-      <section class="banner banner-full">
-        <div class="container">
-          <!-- banner -->
-          <div class="card card-row card-clean">
-            <figure class="media-item mb-0 lazyload">
-              <picture>
-                <source media="(min-width: 40em)" srcset="images/content/img-content-testing.jpg" class="lazyload" alt="Integration Team sitting in the office.">              
-                <img src="images/content/img-content-testing-wide.jpg" data-src="images/content/img-content-testing-wide.jpg" class="lazyload" alt="Integration Team sitting in the office.">
-                <noscript>
-                  <img src="images/content/img-content-testing-1x1.jpg" alt="Integration Team sitting in the office.">
-                </noscript>
-              </picture>
-            </figure>
-            <div class="card-block">
-              <h2 id="advanced-testing" class="card-title">Why Use MaxCentive?</h2>
-              <p class="card-text">MaxCentive is a rule-based software that enables Organizations to build unique plans that are optimized for their success. These plans pertain to Commissions, Loyalty, Payments and Incentives.</p>
-              <a href="#" class="btn btn-lg btn-text">Take a closer look <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- CTA banner -->
       <section class="banner banner-full theme-blue">
         <div class="container">
           <!-- banner -->
-          <div class="card card-row card-row-rev card-clean">
+          <div class="card card-row card-clean">
             <figure class="media-item mb-0 lazyload">
               <picture>
                 <source media="(min-width: 40em)" srcset="images/content/img-content-app-user-01.jpg" class="lazyload" alt="An illustration of analytical icons.">              
@@ -597,9 +574,9 @@
               </picture>
             </figure>
             <div class="card-block bg-analytics">
-              <h2 id="analytic-tools" class="card-title">Analytic Tools</h2>
-              <p class="card-text">Our technology and service transforms the way our customers make decisions. We combine data, technology and analytics to give our customers a competitive edge and help customers rethink and reinvent their strategy by understanding their business data.</p>
-              <a href="#" class="btn btn-lg btn-text">Browse sample reports <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
+              <h2 id="advanced-testing" class="card-title">Why Use MaxCentive?</h2>
+              <p class="card-text">MaxCentive is a rule-based software that enables Organizations to build unique plans that are optimized for their success. These plans pertain to Commissions, Loyalty, Payments and Incentives.</p>
+              <a href="#" class="btn btn-lg btn-text">Take a closer look <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
             </div>
           </div>
         </div>
@@ -667,9 +644,9 @@
         <!-- footer contact -->
         <section class="footer-contact">
           <div class="contact-info">
-            <h4 class="text-md">Contact Us</h4>
+            <h3 class="text-md">Contact Us</h3>
             <div class="contact-nav text-sm">
-              <a href="tel:8005557654">800.555.7654</a>
+              <a class="pr-sm" href="tel:8005557654">800.555.7654</a>
               <a href="mailto:contact@maxcentive.com">contact@maxcentive.com</a>
             </div>
           </div>
