footer content changes

--- a/index.html
+++ b/index.html
@@ -604,9 +604,9 @@
           <nav class="nav-list" aria-labelledby="maxcentive-products">
             <h3 id="maxcentive-products" class="nav-title">Products</h3>
             <ul>
-              <li><a href="about.html">MaxCommissions <span class="text-md">&reg;</span></a></li>
-              <li><a href="payments.html">MaxPayments <span class="text-md">&reg;</span></a></li>
-              <li><a href="loyalty.html">MaxLoyalty <span class="text-md">&reg;</span></a></li>
+              <li><a href="about.html">MaxCommissions</a></li>
+              <li><a href="payments.html">MaxPayments</a></li>
+              <li><a href="loyalty.html">MaxLoyalty</a></li>
               <li><a href="pricing.html">Pricing Calculator</a></li>
             </ul>
           </nav>          
