content styles, grid fix, features section

--- a/advanced-testing.html
+++ b/advanced-testing.html
@@ -558,7 +558,7 @@
                 <h2 id="benefits" class="list-title">Benefits</h2>
                 <li>One stop shop platform for software testing</li>
                 <li>Access to expert test capability</li>
-                <li>Leverage Concordus Apps' digital test automation frameworks for mobile and web automation</li>
+                <li>Leverage MaxCentive' digital test automation frameworks for mobile and web automation</li>
                 <li class="list-parent">No overheads of:
                   <ul class="list-nested">
                     <li>Managing mobile devices &amp; OS versions etc.</li>
@@ -675,7 +675,7 @@
               <!-- copy -->
               <div class="card-block">
                 <h4 class="card-title">Web Application Automated Regression Testing</h4>
-                <p class="card-text">Concordus Apps have developed their own proprietary Framework for Automated Regression testing. The following is just an example of the coverage this framework offers for some of the popular Environment components and Browsers.</p>
+                <p class="card-text">MaxCentive have developed their own proprietary Framework for Automated Regression testing. The following is just an example of the coverage this framework offers for some of the popular Environment components and Browsers.</p>
                 <!--<a href="#" class="btn btn-round btn-primary">Read More</a>-->
               </div>
             </div>
@@ -695,7 +695,7 @@
               <!-- copy -->
               <div class="card-block">
                 <h4 class="card-title">Mobile Application Automated Regression Testing</h4>
-                <p class="card-text">Concordus Apps have developed their own proprietary Framework for Automated Regression testing. The following is just an example of the coverage this framework offers for some of the popular Environment components and Browsers.</p>
+                <p class="card-text">MaxCentive have developed their own proprietary Framework for Automated Regression testing. The following is just an example of the coverage this framework offers for some of the popular Environment components and Browsers.</p>
                 <!--<a href="#" class="btn btn-round btn-primary">Read More</a>-->
               </div>
             </div>
@@ -716,7 +716,7 @@
               <!-- copy -->
               <div class="card-block">
                 <h4 class="card-title">Enterprise Testing</h4>
-                <p class="card-text">Concordus Apps team has experience of various industries e.g. telecom, airlines, utilities, banking, government, media, transport, tunneling etc. Our experience of delivering internal & customer focusing enterprise solutions can help you plan and deliver your next transformation project with an increased confidence through our mature testing services at all level of the programs.</p>
+                <p class="card-text">MaxCentive team has experience of various industries e.g. telecom, airlines, utilities, banking, government, media, transport, tunneling etc. Our experience of delivering internal & customer focusing enterprise solutions can help you plan and deliver your next transformation project with an increased confidence through our mature testing services at all level of the programs.</p>
                 <!--<a href="#" class="btn btn-round btn-primary">Read More</a>-->
               </div>
             </div>
