--- a/analytics.html
+++ b/analytics.html
@@ -503,7 +503,7 @@
             <!-- Page Title -->
             <h1 id="analytics" class="display-4">Analytics</h1>
             
-            <p class="lead">Our core belief at Concordus Apps is DATA IS GOLD. However, just like the mineral, Data needs to be mined, polished and show-cased before it becomes an invaluable asset. This is all we do.</p>
+            <p class="lead">Our core belief at MaxCentive is DATA IS GOLD. However, just like the mineral, Data needs to be mined, polished and show-cased before it becomes an invaluable asset. This is all we do.</p>
 
             <p>We provide the biggest asset for an organization <span class="all-caps">right information delivered in the right format and at the right time.</span></p>
 
