--- a/business-in-a-box.html
+++ b/business-in-a-box.html
@@ -573,7 +573,7 @@
 
             <h2 id="page-section-two" class="pt-2">Pre-Integrated Solution and managed APIs</h2>
             
-            <p>We no longer simply buy technology software or hardware; we plug into a growing open ecosystem of API-driven services that connect applications and developers. Service providers offering API innovation, design, strategy, and services are creating a true competitive advantage and fostering continuous innovation through partners. API development and management is one of core Concordus Apps' competencies and we specialize in using APIs to deliver meaningful solutions.</p>
+            <p>We no longer simply buy technology software or hardware; we plug into a growing open ecosystem of API-driven services that connect applications and developers. Service providers offering API innovation, design, strategy, and services are creating a true competitive advantage and fostering continuous innovation through partners. API development and management is one of core MaxCentive' competencies and we specialize in using APIs to deliver meaningful solutions.</p>
 
             <!-- media item (right) -->
             <figure class="media-item float-r mw-20em lazyload">
