--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
       <!-- masthead -->
       <section class="masthead bg-hero bg-hero-app-user-02 theme-dark">
         <div class="container">
-          <h1>Commissions, Payments and Loyalty. Under One Roof.</h1>
+          <h1>Commissions, Payments and Loyalty. One platform to do it all.</h1>
           <p class="lead">The all-in-one incentive platform that rewards your success the more you use it. MaxCentive addresses the Commissions, Incentives, Payments, Loyalty and Analytics needs of any business in the simplest manner possible.</p>
           <div class="btn-wrap">
           <a href="#page-start" class="btn btn-lg btn-round btn-outline" data-scroll>Learn More</a>
@@ -529,7 +529,7 @@
             </figure>
             <div class="card-block">
               <h2 id="what-is-maxcentive" class="card-title">What is MaxCentive?</h2>
-              <p class="card-text">MaxCentive is a completely integrated and white-label payments hub based on blockchain technology for financial institutions and enterprise customers. The MaxCentive platform is a single cloud-based end-to-end platform to create, process and manage all cash and non-cash transactions related to compensation, loyalty, and incentives paid to partners, contractors, and suppliers.</p>
+              <p class="card-text">MaxCentive is a completely integrated and white-label payments hub based on blockchain technology for financial institutions and enterprise customers. The MaxCentive platform is a single cloud-based end-to-end platform to create, process and manage all cash and non-cash transactions.</p>
               <a href="#" class="btn btn-lg btn-text">Find out how <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
             </div>
           </div>
@@ -541,12 +541,12 @@
         <div class="container">
           <!-- banner -->
           <div class="card card-row card-row-rev card-clean">
-            <figure class="media-item mb-0 lazyload">
+            <figure class="media-item mb-0 lazyload" hidden>
               <picture>
-                <source media="(min-width: 40em)" srcset="images/content/img-content-integration-team.jpg" class="lazyload" alt="Integration Team sitting in the office.">              
-                <img src="images/content/img-content-integration-team-wide.jpg" data-src="images/content/img-content-integration-team-wide.jpg" class="lazyload" alt="Integration Team sitting in the office.">
+                <source media="(min-width: 40em)" srcset="images/content/img-content-customer-analysis-02-tall.jpg" class="lazyload" alt="Integration Team sitting in the office.">              
+                <img src="images/content/img-content-customer-analysis-02-wide.jpg" data-src="images/content/img-content-customer-analysis-02-wide.jpg" class="lazyload" alt="Integration Team sitting in the office.">
                 <noscript>
-                  <img src="images/content/img-content-integration-team-1x1.jpg" alt="Integration Team sitting in the office.">
+                  <img src="images/content/img-content-customer-analysis-02-1x1.jpg" alt="Integration Team sitting in the office.">
                 </noscript>
               </picture>
             </figure>
@@ -560,18 +560,25 @@
       </section>
 
       <!-- CTA banner -->
-      <section class="banner banner-full theme-blue">
+      <section class="banner banner-full theme-dark gradient-blue-green-45">
         <div class="container">
           <!-- banner -->
           <div class="card card-row card-clean">
             <figure class="media-item mb-0 lazyload">
               <picture>
+                <source media="(min-width: 40em)" srcset="images/content/img-content-customer-analysis-02-tall.jpg" class="lazyload" alt="Integration Team sitting in the office.">              
+                <img src="images/content/img-content-customer-analysis-02-wide.jpg" data-src="images/content/img-content-customer-analysis-02-wide.jpg" class="lazyload" alt="Integration Team sitting in the office.">
+                <noscript>
+                  <img src="images/content/img-content-customer-analysis-02-1x1.jpg" alt="Integration Team sitting in the office.">
+                </noscript>
+              </picture>
+              <!--<picture>
                 <source media="(min-width: 40em)" srcset="images/content/img-content-app-user-01.jpg" class="lazyload" alt="An illustration of analytical icons.">              
                 <img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="An illustration of analytical icons.">
                 <noscript>
                   <img src="images/content/img-content-app-user-01-1x1.jpg" alt="An illustration of analytical icons.">
                 </noscript>
-              </picture>
+              </picture>-->
             </figure>
             <div class="card-block bg-analytics">
               <h2 id="advanced-testing" class="card-title">Why Use MaxCentive?</h2>
@@ -581,6 +588,77 @@
           </div>
         </div>
       </section>
+
+      <!-- Features (home) -->
+      <section id="home-features" class="banner features">
+        <div class="container">
+          <h2 id="maxcentive-platform" class="align-center pt-pb-2 h4 MontserratLight all-caps">MaxCentive Features</h2>
+          <div class="grid-wrap">
+            <!-- feature -->
+            <div class="feature">
+              <div class="card">
+                <!-- media item -->
+                <figure class="media-item lazyload">
+                  <picture>            
+                    <img src="images/content/img-content-project-mgmt-wide.jpg" data-src="images/content/img-content-project-mgmt-wide.jpg" class="lazyload" alt="Project manager writing on a whiteboard.">
+                    <noscript>
+                      <img src="images/content/img-content-analytics-wide.jpg" alt="Project manager writing on a whiteboard.">
+                    </noscript>
+                  </picture>
+                </figure>
+                <!-- copy -->
+                <div class="card-block">
+                  <h4 class="card-title">Commissions</h4>
+                  <p class="card-text text-base">MaxCentive has proven capabilities in many types of testing. MaxCentive helps companies rethink and reinvent their testing approach by reducing risk and costs while delivering continuous quality efficiently.</p>
+                  <a href="#" class="btn btn-round btn-primary">Read More</a>
+                </div>
+              </div>
+            </div>
+            <!-- feature -->
+            <div class="feature">
+              <div class="card">
+                <!-- media item -->
+                <figure class="media-item lazyload">
+                  <picture>            
+                    <img src="images/content/img-content-security-dashboard-wide.jpg" data-src="images/content/img-content-security-dashboard-wide.jpg" class="lazyload" alt="Dashboard user interface example.">
+                    <noscript>
+                      <img src="images/content/img-content-security-dashboard-wide.jpg" alt="Dashboard user interface example.">
+                    </noscript>
+                  </picture>
+                </figure>
+                <!-- copy -->
+                <div class="card-block">
+                  <h4 class="card-title">Payments</h4>
+                  <p class="card-text text-base">MaxCentive have developed their own proprietary Framework for Automated Regression testing. The following is just an example of the coverage this framework offers for some of the popular Environment components and Browsers.</p>
+                  <a href="#" class="btn btn-round btn-primary">Read More</a>
+                </div>
+              </div>
+            </div>
+            <!-- feature -->
+            <div class="feature">
+              <div class="card">
+                <!-- media item -->
+                <figure class="media-item lazyload">
+                  <picture>            
+                    <img src="images/content/img-content-bigdata-analysis-03-wide.jpg" data-src="images/content/img-content-bigdata-analysis-03-wide.jpg" class="lazyload" alt="Illustration of testing data process.">
+                    <noscript>
+                      <img src="images/content/img-content-bigdata-analysis-03-wide.jpg" alt="Illustration of testing data process.">
+                    </noscript>
+                  </picture>
+                </figure>
+                <!-- copy -->
+                <div class="card-block">
+                  <h4 class="card-title">Loyalty</h4>
+                  <p class="card-text text-base">MaxCentive have developed their own proprietary Framework for Automated Regression testing. The following is just an example of the coverage this framework offers for some of the popular Environment components and Browsers.</p>
+                  <a href="#" class="btn btn-round btn-primary">Read More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      
 
     </main>
 
