--- a/integration.html
+++ b/integration.html
@@ -531,7 +531,7 @@
 
             <h2 id="integration-as-a-service" class="text-xl pt-sm">Integration as a Service</h2>
             
-            <p>Our core strength is INTEGRATION and due to our in-depth experience with a huge set of integration techniques, products and methodologies, Concordus Apps offers Integration-as-a-Service of the following applications:</p>
+            <p>Our core strength is INTEGRATION and due to our in-depth experience with a huge set of integration techniques, products and methodologies, MaxCentive offers Integration-as-a-Service of the following applications:</p>
 
             <!-- media item (full) -->
             <figure class="media-item pt-pb-1 w-100 lazyload">
