--- a/security-as-a-service.html
+++ b/security-as-a-service.html
@@ -527,7 +527,7 @@
               </picture>
             </figure>
 
-            <p class="h5 mb-3 pt-1 align-center">These are the key features of the Concordus Apps Security-as-a-Service platform</p>
+            <p class="h5 mb-3 pt-1 align-center">These are the key features of the MaxCentive Security-as-a-Service platform</p>
 
             <!-- media item (right) -->
             <figure class="media-item mw-25em float-r lazyload">
