--- a/iaas.html
+++ b/iaas.html
@@ -493,7 +493,7 @@
             <!-- Page Title -->
             <h1 id="integration-as-a-service" class="display-4">Integration as a Service</h1>
             
-            <p>Our core strength is INTEGRATION and due to our in-depth experience with a huge set of integration techniques, products and methodologies, Concordus Apps offers Integration-as-a-Service of the following applications:</p>
+            <p>Our core strength is INTEGRATION and due to our in-depth experience with a huge set of integration techniques, products and methodologies, MaxCentive offers Integration-as-a-Service of the following applications:</p>
 
             <!-- media item (full) -->
             <figure class="media-item pt-pb-1 w-100 lazyload">
