banner & form styles

--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
       <!-- Features (home) -->
       <section id="home-features" class="banner features">
         <div class="container">
-          <h2 id="maxcentive-platform" class="align-center mb-1 pt-pb-2 h4 MontserratLight all-caps">MaxCentive Features</h2>
+          <h2 id="maxcentive-platform" class="align-center mb-1 pt-pb-2 h4 all-caps">MaxCentive Features</h2>
           <div class="grid-wrap">
             <!-- feature -->
             <div class="feature">
@@ -711,18 +711,35 @@
         </div>
         <script>
           $('.carousel-testimonial').carousel({
-
           })
         </script>
       </section>
 
+      <!-- Image Banner -->
+      <section class="pt-4 theme-blue-dark">
+        <div class="container pr-pl-2">
+          <h2 id="maxcentive-platform" class="align-center mb-1 pt-pb-2 h4 all-caps">MaxCentive Features</h2>
+          <!-- media item (full) -->
+          <figure class="media-item mb-0 w-100 lazyload">
+            <picture>
+              <source media="(min-width: 40em)" srcset="images/content/img-content-app-03-wide-LG.png" class="lazyload" alt="Examples of MaxCentive CRM interface.">
+              <img src="images/content/img-content-app-01-wide-LG.png" data-src="images/content/img-content-app-01-wide-LG.png" class="lazyload"
+                alt="Examples of MaxCentive CRM interface.">
+              <noscript>
+                <img src="images/content/img-content-app-01-wide-LG.png" alt="Examples of MaxCentive CRM interface.">
+              </noscript>
+            </picture>
+          </figure>
+        </div>
+      </section>
+
       <!-- Contact Form -->
-      <section class="contact-form banner pt-pb-4">
+      <section class="contact-form banner bg-architect-light pt-pb-4">
         <div class="container">
 
           <!-- Contact Form -->
           <form id="contact-form" method="post" class="mr-ml-a mw-30em" novalidate>
-            <h2 class="border-title align-center mb-4 pb-2">Get in touch with us</h2>
+            <h2 class="border-title align-center mb-4 pb-1">Get in touch with us</h2>
             <div class="form-wrap">
               <!-- Name -->
               <div class="form-group mb-2">
