global bg color

--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
       </section>
 
       <!-- Image Banner -->
-      <section class="pt-4 theme-blue-dark">
+      <section class="pt-4">
         <div class="container pr-pl-2">
           <h2 id="maxcentive-platform" class="align-center mb-1 pt-pb-2 h4 all-caps">MaxCentive Features</h2>
           <!-- media item (full) -->
