--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
       <section class="banner banner-full theme-dark gradient-blue-green-45">
         <div class="container">
           <!-- banner -->
-          <div class="card card-row card-clean">
+          <div class="card card-row card-row-rev card-clean">
             <figure class="media-item mb-0 lazyload">
               <picture>
                 <source media="(min-width: 40em)" srcset="images/content/img-content-customer-analysis-02-tall.jpg" class="lazyload" alt="Integration Team sitting in the office.">              
@@ -715,27 +715,9 @@
         </script>
       </section>
 
-      <!-- Image Banner -->
-      <section class="pt-4">
-        <div class="container pr-pl-2">
-          <h2 id="maxcentive-platform" class="align-center mb-1 pt-pb-2 h4 all-caps">MaxCentive Features</h2>
-          <!-- media item (full) -->
-          <figure class="media-item mb-0 w-100 lazyload">
-            <picture>
-              <source media="(min-width: 40em)" srcset="images/content/img-content-app-03-wide-LG.png" class="lazyload" alt="Examples of MaxCentive CRM interface.">
-              <img src="images/content/img-content-app-01-wide-LG.png" data-src="images/content/img-content-app-01-wide-LG.png" class="lazyload"
-                alt="Examples of MaxCentive CRM interface.">
-              <noscript>
-                <img src="images/content/img-content-app-01-wide-LG.png" alt="Examples of MaxCentive CRM interface.">
-              </noscript>
-            </picture>
-          </figure>
-        </div>
-      </section>
-
       <!-- Contact Form -->
-      <section class="contact-form banner bg-architect-light pt-pb-4">
-        <div class="container">
+      <section class="bg-architect-light contact-form pt-4 pb-0">
+        <div class="container pt-4 pr-pl-3">
 
           <!-- Contact Form -->
           <form id="contact-form" method="post" class="mr-ml-a mw-30em" novalidate>
@@ -768,6 +750,36 @@
             </div>
           </form>
 
+          <!-- media item (full) -->
+          <figure class="media-item mb-0 pt-4 w-100 lazyload">
+            <picture>
+              <source media="(min-width: 40em)" srcset="images/content/img-content-app-03-wide-LG.png" class="lazyload" alt="Examples of MaxCentive CRM interface.">
+              <img src="images/content/img-content-app-01-wide-LG.png" data-src="images/content/img-content-app-01-wide-LG.png" class="lazyload"
+                alt="Examples of MaxCentive CRM interface.">
+              <noscript>
+                <img src="images/content/img-content-app-01-wide-LG.png" alt="Examples of MaxCentive CRM interface.">
+              </noscript>
+            </picture>
+          </figure>
+
+        </div>
+      </section>
+
+      <!-- Image Banner -->
+      <section class="pt-4 hidden">
+        <div class="container pr-pl-2">
+          <h2 id="maxcentive-platform" class="align-center mb-1 pt-pb-2 h4 all-caps">MaxCentive Features</h2>
+          <!-- media item (full) -->
+          <figure class="media-item mb-0 w-100 lazyload">
+            <picture>
+              <source media="(min-width: 40em)" srcset="images/content/img-content-app-03-wide-LG.png" class="lazyload" alt="Examples of MaxCentive CRM interface.">
+              <img src="images/content/img-content-app-01-wide-LG.png" data-src="images/content/img-content-app-01-wide-LG.png" class="lazyload"
+                alt="Examples of MaxCentive CRM interface.">
+              <noscript>
+                <img src="images/content/img-content-app-01-wide-LG.png" alt="Examples of MaxCentive CRM interface.">
+              </noscript>
+            </picture>
+          </figure>
         </div>
       </section>
       
